fix(assignment-5): header content alignment

--- a/week-1/assignments/assignment-5/style.css
+++ b/week-1/assignments/assignment-5/style.css
@@ -126,6 +126,10 @@ body {
   justify-content: space-between;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .gap-2 {
   gap: 2rem;
 }
